--- a/app/src/styles/login.css
+++ b/app/src/styles/login.css
@@ -1,37 +1,28 @@
 body {
-  background: url('../images/login_background.jpg') no-repeat;
-  background-size: 100%;
-}
+  background: url("/images/login_background.jpg") no-repeat;
+  background-size: 100%; }
 
 .sign_in {
   width: 512px;
   height: 512px;
-
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   margin: auto;
-
   max-width: 100%;
   max-height: 100%;
   overflow: auto;
-
   text-align: center;
-
   color: beige;
   font-family: 'Roboto', sans-serif;
-  font-size: 32px;
-
-  h3 {
-    margin-bottom: 64px;
-  }
-
-  .sign_in-form {
-    height: 60%;
-
-    input {
+  font-size: 32px; }
+  .sign_in h3 {
+    margin-bottom: 64px; }
+  .sign_in .sign_in-form {
+    height: 60%; }
+    .sign_in .sign_in-form input {
       background: rgba(21, 21, 21, 0.7);
       border: 0;
       font-size: 24px;
@@ -39,23 +30,16 @@ body {
       height: 32px;
       padding: 8px;
       margin: 8px;
-      color: beige;
-
-
-      &.error {
-        border: red 1px solid;
-      }
-    }
-
-  }
-}
+      color: beige; }
+      .sign_in .sign_in-form input.error {
+        border: red 1px solid; }
 
 .buttons {
   margin: 24px;
-  display: inline-block;
-}
+  display: inline-block; }
 
 .button {
   margin: 16px;
-  cursor: pointer;
-}
+  cursor: pointer; }
+
+/*# sourceMappingURL=login.css.map */
