--- a/app/src/styles/index.css
+++ b/app/src/styles/index.css
@@ -1,4 +1,47 @@
 body {
-  background: #ffd67c; }
+  background: #eeeeee;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  text-align: center; }
+
+a {
+  text-decoration: none; }
+
+.toolbar {
+  background: #388E3C;
+  width: 100%; }
+  .toolbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; }
+    .toolbar ul li {
+      float: left; }
+      .toolbar ul li a {
+        display: inline-block;
+        color: white;
+        text-align: center;
+        padding: 16px 24px;
+        text-decoration: none; }
+      .toolbar ul li a:hover {
+        background-color: #eeeeee;
+        color: #388E3C; }
+
+.card {
+  background: #ffffff;
+  text-align: center;
+  padding: 1em;
+  font-family: 'Lato', sans-serif; }
+  .card .title {
+    font-size: 2em;
+    font-family: 'Roboto', sans-serif; }
+
+.content {
+  margin: 8vh 32vw; }
+
+.no-items {
+  font-size: 2em;
+  color: #333;
+  margin-top: 4em; }
 
 /*# sourceMappingURL=index.css.map */
