--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -1,3 +1,63 @@
 body {
-  background: #006cfF;
+  background: #eeeeee;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+.toolbar {
+  background: #388E3C;
+  width: 100%;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+    li {
+      float: left;
+
+      a {
+        display: inline-block;
+        color: white;
+        text-align: center;
+        padding: 16px 24px;
+        text-decoration: none;
+      }
+
+      a:hover {
+        background-color: #eeeeee;
+        color: #388E3C;
+      }
+    }
+  }
+
+
+}
+
+.card {
+  background: #ffffff;
+  text-align: center;
+  padding: 1em;
+  font-family: 'Lato', sans-serif;
+
+  .title {
+    font-size: 2em;
+    font-family: 'Roboto', sans-serif;
+  }
+}
+
+.content {
+  margin: 8vh 32vw;
+}
+
+.no-items {
+  font-size: 2em;
+  color: #333;
+  margin-top: 4em;
 }
