--- a/app/src/styles/index.css
+++ b/app/src/styles/index.css
@@ -5,13 +5,16 @@ body {
   text-align: center; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #eeeeee; }
+
+ul {
+  list-style-type: none; }
 
 .toolbar {
   background: #388E3C;
   width: 100%; }
   .toolbar ul {
-    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden; }
@@ -26,22 +29,64 @@ a {
       .toolbar ul li a:hover {
         background-color: #eeeeee;
         color: #388E3C; }
+    .toolbar ul li:nth-last-child(1) {
+      float: right; }
 
 .card {
   background: #ffffff;
   text-align: center;
   padding: 1em;
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Lato', sans-serif;
+  display: block; }
   .card .title {
     font-size: 2em;
     font-family: 'Roboto', sans-serif; }
 
-.content {
-  margin: 8vh 32vw; }
+.card-border {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px; }
+  .card-border:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
 
-.no-items {
-  font-size: 2em;
-  color: #333;
-  margin-top: 4em; }
+@media (min-width: 800px) {
+  .content {
+    width: calc(100% - 32em);
+    margin: 8em auto; }
+
+  .two-columns {
+    overflow: hidden; }
+
+  .subject-card {
+    float: left;
+    width: calc(50% - 4em);
+    box-sizing: border-box;
+    height: 14em;
+    margin: 1em 2em;
+    text-align: center; } }
+@media (min-width: 800px) and (max-width: 800px) {
+  .content {
+    width: calc(100% - 8em);
+    margin: 8em auto; }
+
+  .subject-card {
+    float: left;
+    width: calc(100% - 4em);
+    box-sizing: border-box;
+    height: 14em;
+    margin: 1em 2em;
+    text-align: center; } }
+@media (min-width: 800px) {
+  .no-items {
+    font-size: 2em;
+    color: #333;
+    margin-top: 4em; }
+
+  .dark {
+    background: #212121;
+    color: #eeeeee; }
+
+  p {
+    font-size: 2em; } }
 
 /*# sourceMappingURL=index.css.map */
