--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -7,6 +7,11 @@ body {
 
 a {
   text-decoration: none;
+  color: #eeeeee;
+}
+
+ul {
+  list-style-type: none;
 }
 
 .toolbar {
@@ -14,7 +19,6 @@ a {
   width: 100%;
 
   ul {
-    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -35,8 +39,12 @@ a {
         color: #388E3C;
       }
     }
-  }
 
+    li:nth-last-child(1) {
+      float: right;
+    }
+
+  }
 
 }
 
@@ -45,6 +53,7 @@ a {
   text-align: center;
   padding: 1em;
   font-family: 'Lato', sans-serif;
+  display: block;
 
   .title {
     font-size: 2em;
@@ -52,12 +61,66 @@ a {
   }
 }
 
-.content {
-  margin: 8vh 32vw;
+.card-border {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+
+  &:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+}
+
+@media (min-width: 800px) {
+  .content {
+    width: calc(100% - 32em);
+    margin: 8em auto;
+  }
+
+  .two-columns {
+    overflow: hidden;
+  }
+
+  .subject-card {
+    float: left;
+    width: calc(50% - 4em);
+    box-sizing: border-box;
+    height: 14em;
+    margin: 1em 2em;
+    text-align: center;
+
+  }
+
+@media (max-width: 800px) {
+  .content {
+    width: calc(100% - 8em);
+    margin: 8em auto;
+  }
+
+  .subject-card {
+    float: left;
+    width: calc(100% - 4em);
+    box-sizing: border-box;
+    height: 14em;
+    margin: 1em 2em;
+    text-align: center;
+
+  }
 }
 
 .no-items {
   font-size: 2em;
   color: #333;
   margin-top: 4em;
+}
+
+.dark {
+  background: #212121;
+  color: #eeeeee;
+}
+
+  p {
+    font-size: 2em;
+  }
+
 }
