--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -1,51 +1,73 @@
-body {
-  background: #eeeeee;
+$main-font: 'Roboto', sans-serif;
+$main-color: #67727A;
+$primary-color: #388E3C;
+$dark-text-color: #eeeeee;
+
+$max-width: 900px;
+$max-width-mobile: 500px;
+
+* {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
+  padding: 0;
+  border: 0;
+}
+
+body {
+  background: #f5f5f5;
+  font-family: $main-font;
+  color: #67727A;
 }
 
 a {
   text-decoration: none;
-  color: #eeeeee;
+  color: $dark-text-color;
 }
 
 ul {
   list-style-type: none;
 }
 
-.toolbar {
-  background: #388E3C;
+header {
+  background: $primary-color;
   width: 100%;
+  height: 100%;
+}
+
+.header-content {
+  max-width: $max-width;
+  height: 100%;
+  margin: auto;
 
   ul {
-    margin: 0;
-    padding: 0;
+    height: 100%;
     overflow: hidden;
 
     li {
+      height: 100%;
       float: left;
 
+      &:nth-last-child(1) {
+        float: right;
+      }
+
       a {
+        font-size: 1.5em;
         display: inline-block;
-        color: white;
-        text-align: center;
-        padding: 16px 24px;
-        text-decoration: none;
-      }
+        padding: 32px;
+        margin: auto 0;
 
-      a:hover {
-        background-color: #eeeeee;
-        color: #388E3C;
+        &:hover {
+          background-color: $dark-text-color;
+          color: #388E3C;
+        }
       }
     }
-
-    li:nth-last-child(1) {
-      float: right;
-    }
-
   }
+}
 
+.content {
+  max-width: $max-width;
+  margin: 64px auto;
 }
 
 .card {
@@ -62,65 +84,56 @@ ul {
 }
 
 .card-border {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
 
   &:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-}
-
-@media (min-width: 800px) {
-  .content {
-    width: calc(100% - 32em);
-    margin: 8em auto;
-  }
-
-  .two-columns {
-    overflow: hidden;
-  }
-
-  .subject-card {
-    float: left;
-    width: calc(50% - 4em);
-    box-sizing: border-box;
-    height: 14em;
-    margin: 1em 2em;
-    text-align: center;
-
-  }
-
-@media (max-width: 800px) {
-  .content {
-    width: calc(100% - 8em);
-    margin: 8em auto;
-  }
-
-  .subject-card {
-    float: left;
-    width: calc(100% - 4em);
-    box-sizing: border-box;
-    height: 14em;
-    margin: 1em 2em;
-    text-align: center;
-
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   }
 }
 
 .no-items {
   font-size: 2em;
-  color: #333;
-  margin-top: 4em;
+  margin: 64px;
+  text-align: center;
 }
 
-.dark {
-  background: #212121;
-  color: #eeeeee;
+.subject-card {
+  float: left;
+  width: 50%;
+  box-sizing: border-box;
+  height: 128px;
+  color: $dark-text-color;
+  text-align: center;
+
 }
 
-  p {
-    font-size: 2em;
+@media (max-width: 768px) {
+
+  .header-content {
+    max-width: $max-width-mobile;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    ul {
+      li a {
+
+        font-size: 1em;
+        padding: 32px 12px;
+      }
+      li:nth-last-child(1) {
+        float: left;
+      }
+    }
   }
 
+  .content {
+    max-width: $max-width-mobile;
+  }
+
+  .subject-card {
+    width: 100%;
+  }
 }
