--- a/app/src/styles/login.scss
+++ b/app/src/styles/login.scss
@@ -1,6 +1,7 @@
 body {
-  background: url('../src/images/login_background.jpg') no-repeat;
-  background-size: 100%;
+  background: url('/images/dupa.jpg') no-repeat;
+  width: auto;
+  height:100%;
 }
 
 .sign_in {
