--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -1,7 +1,8 @@
 $main-font: 'Roboto', sans-serif;
 $main-color: #67727A;
+$main-background: #ededed;
 $primary-color: #388E3C;
-$dark-text-color: #eeeeee;
+$dark-text-color: #e7e7e7;
 
 $max-width: 900px;
 $max-width-mobile: 500px;
@@ -13,9 +14,9 @@ $max-width-mobile: 500px;
 }
 
 body {
-  background: #f5f5f5;
+  background: $main-background;
   font-family: $main-font;
-  color: #67727A;
+  color: $main-color
 }
 
 a {
@@ -29,8 +30,17 @@ ul {
 
 header {
   background: $primary-color;
+  position: fixed;
+  opacity: 0.98;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: 100%;
+  z-index: 1000;
+}
+
+.active {
+  font-weight: 700;
+  color: #ffffff;
 }
 
 .header-content {
@@ -51,9 +61,9 @@ header {
       }
 
       a {
-        font-size: 1.5em;
+        font-size: 1.2em;
         display: inline-block;
-        padding: 32px;
+        padding: 24px;
         margin: auto 0;
 
         &:hover {
@@ -67,7 +77,7 @@ header {
 
 .content {
   max-width: $max-width;
-  margin: 64px auto;
+  margin: 128px auto;
 }
 
 .card {
@@ -83,6 +93,10 @@ header {
   }
 }
 
+.user-card {
+
+}
+
 .card-border {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
@@ -90,6 +104,7 @@ header {
 
   &:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
   }
 }
 
@@ -101,12 +116,67 @@ header {
 
 .subject-card {
   float: left;
-  width: 50%;
+  width: calc(50% - 24px);
+  margin: 12px 12px;
   box-sizing: border-box;
-  height: 128px;
-  color: $dark-text-color;
-  text-align: center;
+  overflow: auto;
 
+  .subject-card-top {
+    color: $dark-text-color;
+    text-align: center;
+    height: 186px;
+    position: relative;
+
+    .circle {
+      position: absolute;
+      top: 20px;
+    }
+
+    p {
+      text-align: center;
+      font-size: 1.6em;
+      position:absolute;
+      left: 0;
+      right: 0;
+      bottom: 30px;
+      margin: 0 auto;
+    }
+  }
+
+  .subject-card-bottom {
+    background: #ffffff;
+    height: 100px;
+  }
+
+  &:hover {
+    cursor: pointer;
+
+    .circle {
+      border: 3px solid #eeeeee;
+      font-style: oblique;
+    }
+
+    p {
+      font-size: 1.7em;
+    }
+
+  }
+
+}
+
+.circle {
+  font-family: "Roboto", sans-serif;
+  width: 64px;
+  height: 64px;
+  line-height:64px;
+  font-size: 2em;
+  border: 2px solid #eeeeee;
+  color: #eeeeee;
+  border-radius: 100%;
+  text-align: center;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 @media (max-width: 768px) {
@@ -121,7 +191,7 @@ header {
       li a {
 
         font-size: 1em;
-        padding: 32px 12px;
+        padding: 24px 12px;
       }
       li:nth-last-child(1) {
         float: left;
@@ -135,5 +205,6 @@ header {
 
   .subject-card {
     width: 100%;
+    margin: 10px 0;
   }
 }
