--- a/app/src/styles/auth.scss
+++ b/app/src/styles/auth.scss
@@ -21,7 +21,7 @@ body {
 
 .auth {
   width: 600px;
-  max-height: 500px;
+  max-height: 600px;
   background: $primary-color;
 
   position: absolute;
@@ -31,8 +31,7 @@ body {
   bottom: 0;
   margin: auto;
 
-  //max-width: 100%;
-  //max-height: 100%;
+
   overflow: visible;
 
   text-align: center;
@@ -81,18 +80,22 @@ div {
 }
 
 .sign-form {
-  position: relative;
+  position: absolute;
   top: 100px;
   //border: 1px white solid;
-  height: 350px;
+  height: 450px;
   width: inherit;
+
+  .inputs {
+    margin-top: 60px;
+  }
 
   form {
     input {
       width: calc(100% - 20px);
       float: left;
       padding: 16px 10px;
-      margin: 16px auto;
+      margin: 10px auto;
       font-size: 1.3em;
       background: rgba(21, 21, 21, 0.5);
 
