--- a/app/src/styles/auth.scss
+++ b/app/src/styles/auth.scss
@@ -16,13 +16,13 @@ $gray: #ddd;
 body {
   width: 100%;
   height: 100%;
-  background: $main-background;
+  background: url("/images/background.jpg") no-repeat;
 }
 
 .auth {
   max-width: 600px;
   max-height: 600px;
-  background: $primary-color;
+  background: rgba($primary-color, 0.95);
 
   position: absolute;
   left: 0;
@@ -145,7 +145,35 @@ div {
 }
 
 @media (max-width: 768px) {
-  .auth .auth-content .tabs li a {
-    width: 100%;
+  body {
+    background: $primary-color;
+  }
+  .sign-form {
+    position: relative;
+    form input {
+      width: 95%;
+    }
+    .button-block {
+      bottom: 0;
+    }
+  }
+  .card-border {
+    box-shadow: none;
+    &:hover {
+      box-shadow: none;
+    }
+  }
+  .auth {
+    position: relative;
+    top:0;
+    margin: 0 auto;
+    .auth-content {
+      margin: 0 auto;
+      width: 100%;
+      height: 100%;
+      .tabs li a {
+        width: 100%;
+      }
+    }
   }
 }
