--- a/app/src/styles/auth.scss
+++ b/app/src/styles/auth.scss
@@ -69,7 +69,22 @@ body {
       color: $white;
     }
   }
+}
 
+@keyframes error {
+  0%   {transform: translate(5px, 0);}
+  20%  {transform: translate(-5px, 0);}
+  40%  {transform: translate(5px, 0);}
+  60%  {transform: translate(-5px, 0);}
+  80%  {transform: translate(5px, 0);}
+  100% {transform: translate(0, 0);}
+}
+
+.error {
+  border: 1px red solid;
+  animation: error;
+  animation-duration:  0.5s;
+  transition: transform 0.5s;
 }
 
 div {
