--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -255,29 +255,38 @@ header {
   -moz-transform: translate(-50%, -50%);
 
   background-color: #fff;
-  box-shadow: 4px 4px 80px #000;
+  box-shadow: 4px 4px 40px #000;
 }
 
 .ng-modal-dialog-content {
+  padding: 16px;
   text-align: center;
   height: 100%;
+  background: beige;
+}
+
+.ng-modal-dialog-header {
+  margin-top: 8px;
 }
 
 .dialog-buttons {
   float: right;
-  height: 20%;
+  //height: 15%;
   margin-right: 16px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  right: 10px;
 
   .dialog-button {
     float: right;
     display: block;
-    font-size: 1.4em;
+    font-size: 1.1em;
     padding: 12px;
     text-transform: uppercase;
-    color: $accent-color;
+    color: darken($primary-color, 10%);
     font-weight: 700;
     font-family: "Roboto", sans-serif;
 
@@ -285,38 +294,78 @@ header {
       cursor: pointer;
     }
   }
-
 }
 
-.ng-modal-dialog-color {
-  height: 80%;
-  background: #9B59B6;
+.ng-modal-dialog-colors {
+  h4 {
+    margin: 10px;
+  }
+  .colors {
+    max-width: 95%;
+    margin: auto;
 
-  input {
-    border-bottom: 1px gray solid;
-    background: transparent;
-    color: beige;
-    width: 80%;
-    padding: 12px;
-    margin-top: 40px;
-    text-align: center;
-    font-size: 1.8em;
-    font-family: "Roboto", sans-serif;
+    .color {
+      border-radius: 100%;
+      width: 48px;
+      height: 48px;
+      display: inline-block;
+      float: left;
+      margin: 8px;
+      border: 2px solid transparent;
 
-    &:focus {
-      outline: none;
+      &:hover {
+        border: 2px solid $primary-color;
+        cursor: pointer;
+      }
+    }
+
+    .selected-color {
+      border: 2px solid darken($primary-color, 10%);
     }
   }
 }
 
-.ng-modal-close {
-  position: absolute;
-  top: 3px;
-  right: 5px;
-  padding: 5px;
-  cursor: pointer;
-  font-size: 120%;
-  display: inline-block;
-  font-weight: bold;
-  font-family: 'arial', 'sans-serif';
+//#######input
+
+.material-input {
+  position: relative;
+  margin: 32px 0 45px;
+  max-width: 75%;
+
+  input {
+    font-size: 18px;
+    padding: 10px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #757575;
+    background: transparent;
+  }
+
+  input:focus {
+    outline: none;
+  }
+
+  label {
+    color: #999;
+    font-size: 16px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 15px;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+  }
+
+  /* active state */
+  input:focus ~ label, input:valid ~ label {
+    top: -12px;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #5264AE;
+  }
+
 }
+
