--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -128,6 +128,10 @@ header {
     height: 186px;
     position: relative;
 
+    &:hover .delete-x {
+      visibility: visible;
+    }
+
     .circle {
       position: absolute;
       top: 30px;
@@ -199,6 +203,24 @@ header {
     cursor: pointer;
     transform: rotate(90deg);
   }
+}
+
+.delete-x {
+  display: block;
+  font-size: 1.2em;
+  color: $dark-text-color;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-weight: 700;
+  padding: 10px;
+  visibility: hidden;
+
+  &:hover {
+    font-size: 1.4em;
+    text-shadow: -1px 0 $accent-color, 0 1px $accent-color, 1px 0 $accent-color, 0 -1px $accent-color;
+  }
+
 }
 
 @media (max-width: 768px) {
