--- a/app/src/styles/auth.scss
+++ b/app/src/styles/auth.scss
@@ -16,7 +16,7 @@ $gray: #ddd;
 body {
   width: 100%;
   height: 100%;
-  background: url("/images/background.jpg") no-repeat;
+  background: url("/images/login_background.jpg") no-repeat;
 }
 
 .auth {
