Basic user state

--- a/src/app/panel/top/menu.top.html
+++ b/src/app/panel/top/menu.top.html
@@ -1,11 +1,11 @@
 <nav>
     <div class="nav-wrapper  light-green darken-2">
-        <ul id="nav-mobile" class="left hide-on-med-and-dow">
-            <li><a href="#" translate="MENU.PROFILE"></a></li>
+        <ul class="left hide-on-med-and-dow">
+            <li><a href="#" translate="MENU.PROFILE" ui-sref="app.user"></a></li>
             <li><a href="#" translate="MENU.EXAMS"></a></li>
             <li><a href="#" translate="MENU.SUBJECTS"></a></li>
             <li><a href="#" translate="MENU.STATS"></a></li>
         </ul>
-        <a href="#" class="right hide-on-med-and-down" translate="MENU.LOGOUT"></a>
+        <ul class="right m-r-25"><a href="#" translate="MENU.LOGOUT"></a></ul>
     </div>
 </nav>
