Add server-side auth

--- a/src/app/panel/top/menu.top.html
+++ b/src/app/panel/top/menu.top.html
@@ -6,6 +6,7 @@
             <li><a href="#" translate="MENU.SUBJECTS"></a></li>
             <li><a href="#" translate="MENU.STATS"></a></li>
         </ul>
-        <ul class="right m-r-25"><a href="#" translate="MENU.LOGOUT"></a></ul>
+        <ul class="right m-r-25"><a href="#" translate="MENU.LOGOUT" ng-click="$ctrl.logout()">
+        </a></ul>
     </div>
 </nav>
