--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -1,7 +1,7 @@
 <div>
     <form ng-submit="$ctrl.login()">
-        <input type="text" placeholder="login">
-        <input type="password" placeholder="password">
+        <input type="text" placeholder="username" ng-model="$ctrl.username">
+        <input type="password" placeholder="password" ng-model="$ctrl.password">
         <input type="submit">Submit
     </form>
 </div>
