--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -1,25 +1,28 @@
-<div class="valign-wrapper max-height">
-    <div class="row center-align">
+<div class="valign-wrapper max-height row">
+    <div class="row center-align col s4">
         <h4 class="row p-20 grey-text text-darken-1" translate="AUTH.LOGIN.TITLE"></h4>
         <div ng-if="$ctrl.error" translate="AUTH.LOGIN.ERROR" class="red lighten-4 p-20 m-b-10 bor-rad"></div>
+
         <form ng-submit="$ctrl.login()" class="col s12 card">
             <div class="login">
-                <div class='row col s12'>
+                <div class='row'>
                     <div class='input-field col s12'>
                         <input class='validate' type='text' name='username' id='username' ng-model="$ctrl.username"/>
                         <label for='username' translate="AUTH.LOGIN.USERNAME"></label>
                     </div>
                 </div>
 
-                <div class='row col s12'>
+                <div class='row'>
                     <div class='input-field col s12'>
                         <input class='validate' type='password' name='password' id='password' ng-model="$ctrl.password"/>
                         <label for='password' translate="AUTH.LOGIN.PASSWORD"></label>
                     </div>
                 </div>
-                <button type='submit' name='btn_login' class='col row s12 btn btn-large waves-effect red'>Login</button>
-                <div class="row p-20"></div>
+                <div class="row"></div>
+                <button type='submit' name='btn_login' class='col row s12 btn btn-large waves-effect red' translate="AUTH.LOGIN.BUTTON"></button>
             </div>
+            <div class="row"></div>
         </form>
+        <p translate="AUTH.LOGIN.TO_REGISTER" class="a" ui-sref="auth.register"></p>
     </div>
 </div>
