Add custom validation to registration form
(checking if user exists by username or email)

--- a/src/assets/sass/exams.scss
+++ b/src/assets/sass/exams.scss
@@ -69,3 +69,10 @@ body {
     cursor: pointer;
   }
 }
+
+.input-error {
+  color: #F44336;
+  float: left;
+  margin-top: -15px;
+  font-size: 0.8em;
+}
