--- a/src/app/auth/register/register.html
+++ b/src/app/auth/register/register.html
@@ -2,29 +2,34 @@
     <div class="row center-align col s4">
         <h4 class="row p-20 grey-text text-darken-1" translate="AUTH.REGISTER.TITLE"></h4>
 
-        <form ng-submit="$ctrl.login()" class="col s12 card">
+        <form ng-submit="$ctrl.login()" name="form" class="col s12 card">
             <div class="register">
                 <div class='row'>
                     <div class='input-field col s12'>
-                        <input class='validate' type='text' name='username' id='username' ng-model="$ctrl.username"/>
+                        <input class='validate' type='text' name='username' id='username' ng-model="$ctrl.username" required
+                               input-taken checking-existence="$ctrl.usernameExists(value)" error="$ctrl.usernameError"/>
                         <label for='username' translate="AUTH.REGISTER.USERNAME"></label>
+                        <span ng-show="$ctrl.usernameError" class="input-error" translate="AUTH.REGISTER.ERROR.USERNAME_TAKEN"></span>
                     </div>
                 </div>
-
                 <div class='row'>
                     <div class='input-field col s12'>
-                        <input class='validate' type='password' name='password' id='password' ng-model="$ctrl.password"/>
+                        <input class='validate' type='email' name='email' id='email' ng-model="$ctrl.email"
+                               input-taken checking-existence="$ctrl.emailExists(value)" error="$ctrl.emailError" required/>
+                        <label for='email' translate="AUTH.REGISTER.EMAIL"></label>
+                        <span ng-show="$ctrl.emailError" class="input-error" translate="AUTH.REGISTER.ERROR.EMAIL_TAKEN"></span>
+                    </div>
+                </div>
+                <div class='row'>
+                    <div class='input-field col s12'>
+                        <input class='validate' type='password' name='password' id='password'
+                               ng-model="$ctrl.password"/>
                         <label for='password' translate="AUTH.REGISTER.PASSWORD"></label>
                     </div>
                 </div>
-                <div class='row'>
-                    <div class='input-field col s12'>
-                        <input class='validate' type='email' name='password' id='email' ng-model="$ctrl.email"/>
-                        <label for='email' translate="AUTH.REGISTER.EMAIL"></label>
-                    </div>
-                </div>
                 <div class="row"></div>
-                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect red' translate="AUTH.REGISTER.BUTTON"></button>
+                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect red'
+                        translate="AUTH.REGISTER.BUTTON"></button>
                 <div class="row p-20"></div>
             </div>
         </form>
