--- a/src/app/panel/top/menu.top.html
+++ b/src/app/panel/top/menu.top.html
@@ -2,8 +2,8 @@
     <div class="nav-wrapper  light-green darken-2">
         <ul class="left hide-on-med-and-dow">
             <li><a href="#" translate="MENU.PROFILE" ui-sref="app.user"></a></li>
-            <li><a href="#" translate="MENU.EXAMS"></a></li>
-            <li><a href="#" translate="MENU.SUBJECTS"></a></li>
+            <li><a href="#" translate="MENU.EXAMS" ui-sref="app.exams"></a></li>
+            <li><a href="#" translate="MENU.SUBJECTS" ui-sref="app.subjects"></a></li>
             <li><a href="#" translate="MENU.STATS"></a></li>
         </ul>
         <ul class="right m-r-25"><a href="#" translate="MENU.LOGOUT" ng-click="$ctrl.logout()">
