--- a/src/assets/sass/exams.scss
+++ b/src/assets/sass/exams.scss
@@ -48,6 +48,10 @@ body {
   margin-bottom: 10px;
 }
 
+.m-t-30 {
+  margin-top: 30px;
+}
+
 .border {
   border: 1px solid red;
 }
@@ -70,9 +74,43 @@ body {
   }
 }
 
+.p-1-1 {
+  font-size: 1.1em;
+}
+
+h3 {
+  font-weight: 300;
+}
+
 .input-error {
   color: #F44336;
   float: left;
-  margin-top: -15px;
+  margin-top: -20px;
   font-size: 0.8em;
+}
+
+.ng-modal-overlay {
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.6;
+}
+
+.ng-modal-dialog {
+  z-index: 10000;
+  position: fixed;
+  min-width: 25%; /* Default */
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+
+  background-color: #fff;
+  box-shadow: 2px 2px 20px #333;
 }
