--- a/src/app/subjects/subjects.html
+++ b/src/app/subjects/subjects.html
@@ -1,9 +1,27 @@
 <div>
     <h3 class="center-align m-t-100 grey-text text-darken-3" ng-show="!$ctrl.subjects" translate="SUBJECTS.EMPTY"></h3>
-    <div ng-show="$ctrl.subjects" class="row">
-        <ul ng-repeat="subject in $ctrl.subjects" class="row">
-            <li><div class="col s2 m2 border">{{subject}}</div></li>
+    <div ng-show="$ctrl.subjects" class="row m-t-100">
+        <ul class="row">
+            <div class="row col offset-s2 s8">
+                <li ng-repeat="subject in $ctrl.subjects" class="col s4 m4 m-b-10">
+                    <div class="card hoverable pointer p-20">
+                        <div class="">
+                            <div class="circle size-64 center-block" ng-style="{'background': subject.color}">
+                                <h4 class="center-align line-64 white-text text-darken-3 thin">
+                                    {{subject.label[0].toUpperCase()}}</h4>
+                            </div>
+                        </div>
+                        <div class="m-t-30">
+                            <h5 class="light center-align truncate">{{subject.label}}</h5>
+                        </div>
+                    </div>
+                </li>
+            </div>
         </ul>
     </div>
+
+    <a id='fat' class="size-64 btn-floating btn-large waves-effect waves-light red always-center b-20 rotate">
+        <i class="material-icons">add</i>
+    </a>
 
 </div>
