Add subject creator window

--- a/src/assets/sass/exams.scss
+++ b/src/assets/sass/exams.scss
@@ -7,6 +7,7 @@
 }
 
 $background: #ededed;
+$primary: #689f38;
 
 body {
   background: $background;
@@ -76,6 +77,14 @@ body {
 
 .p-1-1 {
   font-size: 1.1em;
+}
+
+.p-1-2 {
+  font-size: 1.2em;
+}
+
+.selected-color {
+  border: 4px solid #689f38;
 }
 
 h3 {
@@ -153,4 +162,24 @@ h3 {
 
 .rotate:hover {
   transform: rotate(90deg);
+}
+
+.m-b-30 {
+  margin-bottom: 30px;
+}
+
+.m-r-5 {
+  margin-right: 5px;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.m-b-20 {
+  margin-bottom: 20px;
+}
+
+p > .p-disabled {
+  color: gray !important;
 }
