--- a/src/app/subjects/new/subjects.new.html
+++ b/src/app/subjects/new/subjects.new.html
@@ -1,6 +1,39 @@
 <div class='ng-modal grey-text text-darken-3'>
-    <div class='ng-modal-overlay' ng-click='$ctrl.hide()'></div>
-    <div class='ng-modal-dialog p-20'>
+    <div class='ng-modal-overlay row' ng-click='$ctrl.hide()'></div>
+    <div class='ng-modal-dialog row col s4 offset-s4'>
+        <div class="p-20">
+            <h5 class="header center-align" translate="SUBJECTS.NEW.TITLE"></h5>
 
+            <div class='row'>
+                <div class='input-field col s12'>
+                    <input class='validate' type='text' name='label' id='label' ng-model="$ctrl.subject.label" required
+                           input-taken checking-existence="$ctrl.usernameExists(value)" error="$ctrl.usernameError"/>
+                    <label for='label' translate="SUBJECTS.NEW.INPUT_LABEL"></label>
+                </div>
+            </div>
+
+            <div>
+                <h5 class="center-align m-b-20 light" translate="SUBJECTS.NEW.COLOR"></h5>
+            </div>
+
+            <ul class="row p-20">
+                <li ng-repeat="color in $ctrl.colors">
+                    <div class="col s3 m-b-10">
+                        <div class="circle size-64 center-block pointer" ng-style="{'background': color}"
+                             ng-class="$ctrl.colorIndex == $index ? 'selected-color' : ''"
+                             ng-click="$ctrl.selectColor($index)"></div>
+                    </div>
+                </li>
+            </ul>
+
+            <div class="m-b-30">
+                <p class="p-20 waves-effect waves-light right bold p-1-2 green-text text-darken-2"
+                   ng-click="$ctrl.hide()" translate="SUBJECTS.NEW.BUTTON.SUBMIT"></p>
+
+                <p class=" p-20 waves-effect waves-light right bold p-1-2 red-text text-darken-2"
+                   ng-click="$ctrl.hide()" translate="SUBJECTS.NEW.BUTTON.CANCEL"></p>
+            </div>
+
+        </div>
     </div>
 </div>
