--- a/src/app/subjects/new/subjects.new.html
+++ b/src/app/subjects/new/subjects.new.html
@@ -4,12 +4,7 @@
         <div class="p-20">
             <h5 class="header center-align" translate="SUBJECTS.NEW.TITLE"></h5>
 
-            <div class='row'>
-                <div class='input-field col s12'>
-                    <input class='validate' type='text' name='label' id='label' ng-model="$ctrl.subject.label" required/>
-                    <label for='label' translate="SUBJECTS.NEW.INPUT_LABEL"></label>
-                </div>
-            </div>
+            <text-input label="{{'SUBJECTS.NEW.INPUT_LABEL' | translate}}" model="$ctrl.subject.label"></text-input>
 
             <div>
                 <h5 class="center-align m-b-20 light" translate="SUBJECTS.NEW.COLOR"></h5>
