--- a/src/app/subjects/details/subject.details.html
+++ b/src/app/subjects/details/subject.details.html
@@ -6,6 +6,8 @@
             </div>
         </div>
 
-       <text-input label="{{'SUBJECTS.NEW.INPUT_LABEL' | translate}}" model="$ctrl.subject.label"></text-input>
+       <div text-input class="m-t-30" label="{{'SUBJECTS.NEW.INPUT_LABEL' | translate}}" model="$ctrl.subject.label"></div>
+
+        <color-choice on-change="$ctrl.changeColor(color)"></color-choice>
     </div>
 </div>
