Add translation to subject details button

--- a/src/app/subjects/details/subject.details.html
+++ b/src/app/subjects/details/subject.details.html
@@ -11,8 +11,7 @@
         <color-choice on-change="$ctrl.changeColor(color)" color="$ctrl.subject.color"></color-choice>
 
         <button class="btn btn-large waves-effect waves-light right" type="submit" name="action"
-                ng-click="$ctrl.update()">
-            APPLY
+                ng-click="$ctrl.update()" translate="BUTTON.APPLY">
         </button>
     </div>
 </div>
