Update subject list after delete / update particular subject

--- a/src/app/subjects/details/subject.details.html
+++ b/src/app/subjects/details/subject.details.html
@@ -20,5 +20,6 @@
         </a>
     </div>
 
-    <modal-confirmation show="$ctrl.modalShown" message="{{'MODAL.EXAMS.MESSAGE' | translate}}" on-submit="$ctrl.deleteSubject()" title="{{'MODAL.EXAMS.TITLE' | translate}}"></modal-confirmation>
+    <modal-confirmation show="$ctrl.modalShown" message="{{'SUBJECTS.DETAILS.DELETE.MESSAGE' | translate}}"
+                        on-submit="$ctrl.deleteSubject()" title="{{'SUBJECTS.DETAILS.DELETE.TITLE' | translate}}"></modal-confirmation>
 </div>
