--- a/src/app/panel/top/menu.top.html
+++ b/src/app/panel/top/menu.top.html
@@ -4,7 +4,7 @@
             <li><a href="#" translate="MENU.PROFILE" ui-sref="app.user"></a></li>
             <li><a href="#" translate="MENU.EXAMS" ui-sref="app.exams"></a></li>
             <li><a href="#" translate="MENU.SUBJECTS" ui-sref="app.subjects"></a></li>
-            <li><a href="#" translate="MENU.STATS"></a></li>
+            <li><a href="#" translate="MENU.STATS" ui-sref="app.stats"></a></li>
         </ul>
         <ul class="right m-r-25"><a href="#" translate="MENU.LOGOUT" ng-click="$ctrl.logout()">
         </a></ul>
