--- a/src/assets/sass/exams.scss
+++ b/src/assets/sass/exams.scss
@@ -145,6 +145,15 @@ h3 {
   height: 64px;
 }
 
+.size-52 {
+  width: 52px;
+  height: 52px;
+}
+
+.line-52 {
+  line-height: 52px;
+}
+
 .line-64 {
   line-height: 64px;
 }
@@ -194,4 +203,12 @@ h3 {
 
 .p-h-50 {
   padding: 50px 0 ;
+}
+
+.m-l-25 {
+  margin-left: 25px;
+}
+
+.m-b-15 {
+  margin-bottom: 15px;
 }
