--- a/src/app/subjects/subjects.html
+++ b/src/app/subjects/subjects.html
@@ -20,10 +20,7 @@
         </ul>
     </div>
 
-    <a id='fat' class="size-64 btn-floating btn-large waves-effect waves-light red always-center b-20 rotate" ng-click="$ctrl.showModal = true">
-        <i class="material-icons">add</i>
-    </a>
-
+    <fab on-click="$ctrl.showModal = true"></fab>
     <new-subject ng-show="$ctrl.showModal" on-cancel="$ctrl.showModal = false" on-submit="$ctrl.addNewSubject(subject)"></new-subject>
 
 </div>
