--- a/src/app/utils/fab/fab.html
+++ b/src/app/utils/fab/fab.html
@@ -1,3 +1,3 @@
-<a id='fat' class="size-64 btn-floating btn-large waves-effect waves-light red always-center b-20 rotate" ng-click="onClick()">
+<a id='fat' class="size-64 btn-floating btn-large waves-effect waves-light red always-center b-20 pulse-on-hover" ng-click="onClick()">
     <i class="material-icons">add</i>
 </a>
