--- a/src/assets/sass/ui.select.style.scss
+++ b/src/assets/sass/ui.select.style.scss
@@ -1,3 +1,11 @@
-.ui-select-choices-row {
-  padding: 20px;
+.input-h-1 {
+  input[type=search] {
+    height: inherit;
+  }
+}
+
+div {
+  .selectize-input {
+    padding: 20px;
+  }
 }
