--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -25,6 +25,6 @@
         </li>
     </ul>
 
-    <fab on-click="$ctrl.dupa()"></fab>
-
+    <fab on-click="$ctrl.showModal = true"></fab>
+    <new-exam ng-show="$ctrl.showModal" on-cancel="$ctrl.showModal = false" on-submit="$ctrl.dupa"></new-exam>
 </div>
